@@ -1,0 +1,2 @@
+
+This package provides a statically-linked version of tcsh.
