@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2007/04/14 11:43:13 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2007/04/25 13:26:42 obache Exp $
 #
 
 MAINTAINER=		agc@NetBSD.org
@@ -6,6 +6,7 @@ MAINTAINER=		agc@NetBSD.org
 DISTINFO_FILE=		${.CURDIR}/../../shells/tcsh/distinfo
 PATCHDIR=		${.CURDIR}/../../shells/tcsh/patches
 PKGDIR=			${.CURDIR}/../../shells/tcsh
+DESCR_SRC=		${.CURDIR}/../../shells/tcsh/DESCR ${.CURDIR}/DESCR
 
 CONFLICTS=		tcsh-[0-9]*
 
