@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2011/10/28 22:00:13 ryoon Exp $
+# $NetBSD: Makefile,v 1.2 2011/11/01 06:02:38 sbd Exp $
 #
 
-DISTNAME=	pdfgrep-1.2
-PKGREVISION=	1
+DISTNAME=	pdfgrep-1.3.0
 CATEGORIES=	textproc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=pdfgrep/}
 
@@ -18,5 +17,6 @@ USE_LANGUAGES=	c++ c
 USE_TOOLS+=	pkg-config
 
 .include "../../print/poppler-includes/buildlink3.mk"
+.include "../../print/poppler-cpp/buildlink3.mk"
 .include "../../print/poppler/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
