@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2328 2012/07/20 20:08:35 wiz Exp $
+$NetBSD: CHANGES-2012,v 1.2329 2012/07/21 10:04:41 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -3598,3 +3598,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated net/nsd to 3.2.12 [wiz 2012-07-20]
 	Updated devel/js_of_ocaml to 1.2nb1 [wiz 2012-07-20]
 	Added meta-pkgs/modular-xorg-protos version 1.0 [wiz 2012-07-21]
+	Updated textproc/pdfgrep to 1.3.0 [ryoon 2012-07-21]
